fixed layout issues by removing duplicate divs. most noticable in mainContent for now.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,8 +21,6 @@ body, html {
     overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
-/* header */
-
 .header {
     height: 65px;
     width: 100%;
@@ -45,7 +43,7 @@ body, html {
     margin-right: 15px;
 }
 
-.fa-folder-tree { /* the icon in the header */
+.fa-folder-tree {
     font-size: 22px;
     margin-right: 15px;
 }
@@ -85,13 +83,11 @@ body, html {
     margin-right: 10px;
 }
 
-.container { /* for search bar */
+.container {
     display: flex;
     flex: 1;
     overflow: hidden;
 }
-
-/* fileTree, main content, and dataPanel */
 
 .file-tree, .main-content, .data-panel {
     overflow-y: auto;
@@ -135,10 +131,10 @@ body, html {
 }
 
 /* Gallery */
-
 .masonry-container {
     column-gap: 10px;
     padding: 10px;
+    column-fill: balance;
 }
 
 .imageItem {
